--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,7 @@ phases:
     commands:
       - echo Build started on `date`
       - dotnet publish -c release -o ./build_output WebApplicationSample/WebApplicationSample.csproj
-      - cp ./.ebextension ./build_output
 artifacts:
   files:
     - ./**/*
-  base-directory: './build_output'
+  base-directory: './build_output ./.ebextension'
