--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - echo Build started on `date`
       - dotnet publish -c release -o ./build_output WebApplicationSample/WebApplicationSample.csproj
       - cp -r ./.platform ./build_output/
+      - cp -r ./.ebextensions ./build_output/
 artifacts:
   files:
     - ./**/*
