--- a/.ebextensions/01_write_custom_ng_conf.config
+++ b/.ebextensions/01_write_custom_ng_conf.config
@@ -5,4 +5,4 @@ files:
        client_max_body_size  520M;
 container_commands:
   permisson_config:
-     command: “chmod 755 .platform/hooks/postdeploy/01_update_ng_conf.sh”
+     command: “mv /tmp/custom_nginx.conf /etc/nginx/conf.d/”
