--- a/.ebextensions/01_write_custom_ng_conf.config
+++ b/.ebextensions/01_write_custom_ng_conf.config
@@ -1,5 +1,7 @@
 files:
   "/tmp/custom_nginx.conf":
+     mode: "000644"
+     owner: root
+     group: root
      content: |
-
        client_max_body_size  520M;
